feat: create savePost and cleanFields function

--- a/pages/posts.html
+++ b/pages/posts.html
@@ -28,15 +28,15 @@
             <textarea type="text" id="resume" name="resume" rows="4" required></textarea>
         </div>
         <div>
-            <label for="autor">Autor</label>
-            <input type="text" id="autor" name="autor" required>
+            <label for="author">Autor(a)</label>
+            <input type="text" id="author" name="author" required>
         </div>
         <div>
             <label for="date">Date de publicação</label>
-            <input type="text" id="date" name="date" required>
+            <input type="date" id="date" name="date" required>
         </div>
 
-        <button>Cadastrar</button>
+        <button type="button" onclick="savePost()">Cadastrar</button>
 
     
     </div>
